--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
 aioredis==1.3.1
-asgiref==3.2.10
+appdirs==1.4.4
+asgi-redis==1.4.3
+asgiref==3.3.1
 async-timeout==3.0.1
 attrs==20.1.0
-autobahn==20.7.1
+autobahn==21.3.1
 Automat==20.2.0
 cffi==1.14.2
-channels==2.4.0
-channels-redis==3.0.1
+certifi==2020.12.5
+channels==3.0.3
+channels-redis==3.2.0
 constantly==15.1.0
-cryptography==3.1
-daphne==2.5.0
+cryptography==3.4.7
+daphne==3.0.1
 dj-database-url==0.5.0
 Django==3.1.1
+django-heroku==0.3.1
 gunicorn==20.0.4
+haikunator==2.1.0
 hiredis==1.1.0
 hyperlink==20.0.1
 idna==2.10
